--- a/docs/reappointment/cv/kaki-cv.tex
+++ b/docs/reappointment/cv/kaki-cv.tex
@@ -203,7 +203,7 @@ Cryptography, Databases, Functional Programming, Automated Reasoning, Program An
 \heading{D. Awards/Honors}
 
 \vspace{1em}
- 
+
 \noindent {\em Professional}
 %\vspace*{-1em}
 \begin{center}
@@ -508,44 +508,29 @@ NASA Goddard Space Flight Center.
 \vspace{1em}
 In many areas of Computer Science, the first and primary publications are
 full-length peer-reviewed papers in the proceedings of selective
-conferences. Many conferences have extensive two-phase review processes
-with author responses. These include the four flagship conferences of ACM's
-Special Interest Group on Programming Languages (SIGPLAN), namely POPL,
-PLDI, OOPSLA, and ICFP. The proceedings of POPL, OOPSLA, and ICFP are also
-published in a journal named the Proceedings of ACM in Programming
-Languages (PACMPL). The DBLP service (http://dblp.uni-trier.de/db/)
-maintains an up-to-date index of Computer Science literature. In the
-following, the names of the students whom I formally advise are underlined
-(besides my name). The students whom I unofficially advise are indicated
-with $\dag$. Author ordering signifies the volume of contributions unless
-otherwise specified. 
+conferences whose acceptance rates are well below 30\%. Many conferences
+have extensive two-phase review processes with author responses. These
+include the four flagship conferences of ACM's Special Interest Group on
+Programming Languages (SIGPLAN), namely POPL, PLDI, OOPSLA, and ICFP. The
+proceedings of POPL, OOPSLA, and ICFP are also published in a journal named
+the Proceedings of ACM in Programming Languages (PACMPL). In the following:
+\begin{itemize}
+  \item The peer-reviewed conference publications with acceptance rate less
+  than 30\% are listed as ``Journal-equivalent'' publications.
+  \item The names of the students whom I formally advise are underlined.
+  Those whom I unofficially advise are indicated with a $\dag$.
+  \item Author ordering signifies the volume of contributions unless
+  otherwise specified.
+\end{itemize}
+ 
 
-
-\newcommand{\ugkaki}{\underline{Gowtham Kaki}}
+\newcommand{\ugkaki}{\textbf{Gowtham Kaki}}
 \newcommand{\bec}{Bor-Yuh Evan Chang}
 \newcommand{\sj}{Suresh Jagannathan}
 
 \vspace{1em}
-\begin{region} {Journal Pre-prints}{{J}1}{9}
 
-\begin{publication}{}
-		{Dissprove: Goal-Directed Verification of Parametrized Affine Actor Systems}
-    {Jan 2026}{\underline{Christian Fontenot}, \ugkaki, and \bec}
-    {Under submission to Proceedings of the ACM on Programming Languages
-    (PACMPL), issue POPL 2026}{Full paper (25 pages)}
-\end{publication}
-
-\begin{publication}{}
-		{Effectively-Propositional Higher-Order Functional Programming}
-    {Apr 2026}{\underline{Nicholas Lewchenko}, \ugkaki, and \bec}
-    {Conditionally accepted with major revision at Proceedings of the ACM
-    on Programming Languages (PACMPL), issue OOPSLA 2026}{Full paper (25 pages)}
-\end{publication}
-
-\end{region}
-
-
-\begin{region} {Journal Publications}{{J}1}{7}
+\begin{region} {Journal or Journal-Equivalent Publications}{{J}1}{7}
 
 \begin{publication}{https://dl.acm.org/doi/10.1145/3720502}
 		{Bolt-On Strong Consistency: Specification, Implementation, and Verification}
@@ -553,6 +538,13 @@ otherwise specified.
     {Proceedings of the ACM on Programming Languages (PACMPL), issue OOPSLA1
     2025}
     {Article No.: 137; Pages: 1604 - 1631; Acceptance rate: 32\%}
+\end{publication}
+
+\begin{publication} {https://www.usenix.org/conference/usenixsecurity25/presentation/dai}
+		{Lancet: A Formalization Framework for Crash and Exploit Pathology}
+		{August 2025} {Qinrun Dai, \underline{Kirby Linvill}, Yueqi Chen, \ugkaki}
+		{34$^{th}$ USENIX Security Symposium (Security 2025)}
+    {Pages 375 - 394 (double column); Accceptance rate: 17\%}
 \end{publication}
 
 \begin{publication}{https://gowthamk.github.io/docs/oopsla23a.pdf}
@@ -570,6 +562,15 @@ otherwise specified.
     2023}
     {Article No.: 289; Pages 1905 - 1934; Acceptance rate: 38\%}
 \end{publication}
+
+\begin{publication} {https://gowthamk.github.io/docs/pldi22.pdf}
+  {RunTime-Assisted Convergence in Replicated Data Types}
+  {June 2022} {\ugkaki, Prasanth Prahladan$^\dag$, \underline{Nicholas Lewchenko}}
+  {43$^{rd}$ ACM SIGPLAN Programming Language Design and
+  Implementation (PLDI 2022)}
+  {Pages 364 - 378 (double column); Accceptance rate: 20\%}
+\end{publication}
+
 
 \begin{publication}{https://gowthamk.github.io/docs/mrdt.pdf}
 		{Mergeable Replicated Data Types}
@@ -603,39 +604,6 @@ otherwise specified.
     {Invited article; Pages 52 - 64.}
   \end{publication}
 
-\end{region}
-
-\begin{region} {Peer-Reviewed Conference Publications}{{C}1}{7}
-
-  \begin{publication} {https://www.usenix.org/conference/usenixsecurity25/presentation/dai}
-		{Lancet: A Formalization Framework for Crash and Exploit Pathology}
-		{August 2025} {Qinrun Dai, \underline{Kirby Linvill}, Yueqi Chen, \ugkaki}
-		{34$^{th}$ USENIX Security Symposium (Security 2025)}
-    {Pages 375 - 394 (double column); Accceptance rate: 17\%}
-  \end{publication}
-
-	\begin{publication} {https://gowthamk.github.io/docs/pldi22.pdf}
-		{RunTime-Assisted Convergence in Replicated Data Types}
-		{June 2022} {\ugkaki, Prasanth Prahladan$^\dag$, \underline{Nicholas Lewchenko}}
-		{43$^{rd}$ ACM SIGPLAN Programming Language Design and
-    Implementation (PLDI 2022)}
-    {Pages 364 - 378 (double column); Accceptance rate: 20\%}
-  \end{publication}
-
-	\begin{publication} {https://gowthamk.github.io/docs/snapl19.pdf}
-		{Version Control Is For Your Data Too}
-		{May 2019} {\ugkaki, KC Sivaramakrishnan, Suresh Jagannathan}
-		{3$^{rd}$ Summit on Advances in Programming Languages (SNAPL 2019)}
-    {Pages 8:1 - 8:18; Accceptance rate: 57\%}
-  \end{publication}
-
-	\begin{publication} {https://gowthamk.github.io/docs/ecoop2018.pdf}
-		{Safe Transferable Regions}
-		{Jul 2018} {\ugkaki, G Ramalingam}
-		{32$^{nd}$ European Conference on Object-Oriented Programming (ECOOP 2018)}
-    {Pages 11:1-11:31; Accceptance rate: 39\%}
-  \end{publication}
-
   \begin{publication} {https://gowthamk.github.io/docs/quelea.pdf}
     {Declarative Programming over Eventually Consistent Data Stores}
     {Jun 2015} {KC Sivaramakrishnan, \ugkaki, Suresh Jagannathan}
@@ -649,6 +617,43 @@ otherwise specified.
     {Sep 2014}{\ugkaki, Suresh Jagannathan}
     {19$^{th}$ ACM SIGPLAN  International Conference on Functional Programming (ICFP 2014)}
     {Pages 413 - 424 (double column); Accceptance rate: 29\%}
+  \end{publication}
+
+\end{region}
+
+\begin{region} {Journal Pre-prints}{{J}1}{9}
+
+\begin{publication}{}
+		{Dissprove: Goal-Directed Verification of Parametrized Affine Actor Systems}
+    {Jan 2026}{\underline{Christian Fontenot}, \ugkaki, and \bec}
+    {Under submission to Proceedings of the ACM on Programming Languages
+    (PACMPL), issue POPL 2026}{Full paper (25 pages)}
+\end{publication}
+
+\begin{publication}{}
+		{Effectively-Propositional Higher-Order Functional Programming} {Apr
+    2026}{\underline{Nicholas Lewchenko}, \ugkaki, and \bec} {Under the
+    editorial process (Major Revision) at the Proceedings of the ACM on
+    Programming Languages (PACMPL), issue OOPSLA 2026}{Full paper (25
+    pages)}
+\end{publication}
+
+\end{region}
+
+\begin{region} {Peer-Reviewed Conference Publications}{{C}1}{7}
+
+	\begin{publication} {https://gowthamk.github.io/docs/snapl19.pdf}
+		{Version Control Is For Your Data Too}
+		{May 2019} {\ugkaki, KC Sivaramakrishnan, Suresh Jagannathan}
+		{3$^{rd}$ Summit on Advances in Programming Languages (SNAPL 2019)}
+    {Pages 8:1 - 8:18; Accceptance rate: 57\%}
+  \end{publication}
+
+	\begin{publication} {https://gowthamk.github.io/docs/ecoop2018.pdf}
+		{Safe Transferable Regions}
+		{Jul 2018} {\ugkaki, G Ramalingam}
+		{32$^{nd}$ European Conference on Object-Oriented Programming (ECOOP 2018)}
+    {Pages 11:1-11:31; Accceptance rate: 39\%}
   \end{publication}
 
   \begin{publication}{https://www.researchgate.net/publication/224127688_Novel_adaptive_scheduling_algorithm_for_computational_grid}
