New blog post plus categories

--- a/_posts/2015-07-31-ACID.markdown
+++ b/_posts/2015-07-31-ACID.markdown
@@ -2,6 +2,7 @@
 layout: post
 title:  "Atomicity vs Isolation"
 permalink: ACID.html
+categories: databases, transactions
 ---
 
 From the perspective of a transaction,
