--- a/docs/reappointment/cv/kaki-cv.tex
+++ b/docs/reappointment/cv/kaki-cv.tex
@@ -207,10 +207,10 @@ Cryptography, Databases, Functional Programming, Automated Reasoning, Program An
 \noindent {\em Professional}
 %\vspace*{-1em}
 \begin{center}
-  \begin{tabular}{ p{15cm}  r }
-{\bf Provost's Award} for outstanding service and highly-valued accomplishments& 2025 \\ [3pt]
-\hspace{2em} University of Colorado Boulder, USA. &
-\\[6pt]
+\begin{tabular}{ p{15cm}  r }
+%{\bf Provost's Award} for outstanding service and highly-valued accomplishments& 2025 \\ [3pt]
+%\hspace{2em} University of Colorado Boulder, USA. & 
+%\\[6pt]
 %
 {\bf Amazon Research Award} & 2023 \\ [3pt]
 \hspace{2em} Amazon Inc., USA. &
@@ -476,7 +476,7 @@ Verification and Model Checking}}
 
 \noindent Graduated BS/MS Thesis Advisees
 \begin{enumerate}
-\item Pranav Subramanian, Fall 2022--Spring 2023,
+\item Pranav Subramanian (BS), Fall 2022--Spring 2023,
 Computer Science, CU Boulder,\\
 {\bf Thesis Title.} {\em Secko: A Distributed
 Content-Addressable Data Store}. \\{\bf First Employment.} {\it Sofware Engineer},
