--- a/docs/reappointment/service-statement/content.tex
+++ b/docs/reappointment/service-statement/content.tex
@@ -35,10 +35,10 @@ my colleague Evan Chang in Summer 2024. I chaired the search during 2024-25
 academic year, coordinating a team of 11 faculty across CUPLV and Systems
 groups. We reviewed 387 applications, conducted 18 zoom interviews,
 organized campus visits for 4 candidates, interviewed 3, and recommended
-offers to 2, both of whom ended up accepting our offers. For my
-contributions to the department and college's research and teaching
-missions, I was awarded a special recognition by the provost on
-recommendation by the CEAS dean and the CS department chair. 
+offers to 2, both of whom ended up accepting our offers. %For my
+%contributions to the department and college's research and teaching
+%missions, I was awarded a special recognition by the provost on
+%recommendation by the CEAS dean and the CS department chair. 
 
 \vspace*{0.15in}
 \mypara{B. Service to ACM SIGPLAN} I am a staunch believer in the potential
