--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,68 +1,57 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{vsr-podc88,
+	author = {Oki, Brian M. and Liskov, Barbara H.},
+	title = {Viewstamped Replication: A New Primary Copy Method to Support Highly-Available Distributed Systems},
+	year = {1988},
+	isbn = {0897912772},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/62546.62549},
+	doi = {10.1145/62546.62549},
+	booktitle = {Proceedings of the Seventh Annual ACM Symposium on Principles of Distributed Computing},
+	pages = {8–17},
+	numpages = {10},
+	location = {Toronto, Ontario, Canada},
+	series = {PODC '88}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{FLP1985,
+	author = {Fischer, Michael J. and Lynch, Nancy A. and Paterson, Michael S.},
+	title = {Impossibility of distributed consensus with one faulty process},
+	year = {1985},
+	issue_date = {April 1985},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {32},
+	number = {2},
+	issn = {0004-5411},
+	url = {https://doi.org/10.1145/3149.214121},
+	doi = {10.1145/3149.214121},
+	journal = {J. ACM},
+	month = apr,
+	pages = {374–382},
+	numpages = {9}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf}
+@article{paxos,
+  title={Paxos made simple},
+  author={Lamport, Leslie},
+  journal={ACM Sigact News},
+  volume={32},
+  number={4},
+  pages={18--25},
+  year={2001}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{raft,
+	author = {Ongaro, Diego and Ousterhout, John},
+	title = {In Search of an Understandable Consensus Algorithm},
+	year = {2014},
+	isbn = {9781931971102},
+	publisher = {USENIX Association},
+	address = {USA},
+	booktitle = {Proceedings of the 2014 USENIX Conference on USENIX Annual Technical Conference},
+	pages = {305–320},
+	numpages = {16},
+	location = {Philadelphia, PA},
+series = {USENIX ATC'14}
 }
